--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "flowchat-ts",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "license": "MIT",
   "author": "Hinson Chan",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
   "keywords": [
     "openai",
     "gpt3",
@@ -17,19 +23,53 @@
     "prompt-engineering",
     "toolkit"
   ],
-  "scripts": {},
+  "scripts": {
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build",
+    "size": "size-limit",
+    "analyze": "size-limit --why"
+  },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "async-retry": "^1.3.3",
     "dotenv": "^16.4.5",
-    "openai": "^4.28.4",
-    "pino": "^8.19.0",
-    "pino-pretty": "^10.3.1",
+    "openai": "^4.71.1",
+    "pino": "^9.5.0",
+    "pino-pretty": "^13.0.0",
     "ts-dedent": "^2.2.0"
   },
   "devDependencies": {
-    "@types/async-retry": "^1.4.8"
-  }
+    "@size-limit/preset-small-lib": "^11.1.6",
+    "husky": "^9.1.6",
+    "size-limit": "^11.1.6",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.8.1",
+    "typescript": "^5.6.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint"
+    }
+  },
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "module": "dist/flowchat-ts.esm.js",
+  "size-limit": [
+    {
+      "path": "dist/flowchat-ts.cjs.production.min.js",
+      "limit": "10 KB"
+    },
+    {
+      "path": "dist/flowchat-ts.esm.js",
+      "limit": "10 KB"
+    }
+  ]
 }
